BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/Unibis_Product_Cost__c.object-meta.xml
<CustomObject>
    <label>Unibis Product Cost</label>
    <nameField>
        <displayFormat>UPCN-{0000}</displayFormat>
        <label>Unibis Product Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unibis Products Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>