BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/fields/Cost2__c.field-meta.xml
<CustomField>
    <fullName>Cost2__c</fullName>
    <label>Prior Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>