BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/fields/Historical_Cost__c.field-meta.xml
<CustomField>
    <fullName>Historical_Cost__c</fullName>
    <label>Historical Cost</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>