BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <label>Last Mfg / Receipt Date</label>
    <type>Date</type>
</CustomField>