BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Unibis Products Cost</relationshipLabel>
    <relationshipName>Unibis_Products_Cost</relationshipName>
    <type>Lookup</type>
</CustomField>