BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/fields/Supply_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Supply_Warehouse__c</fullName>
    <description>From WareHouse</description>
    <label>Supply Warehouse</label>
    <length>80</length>
    <type>Text</type>
</CustomField>