BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/fields/Unibis_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Unibis_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unibis External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>