BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Part_Number__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>Cost__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>