BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/Basso_Wundowie_Costs.listView-meta.xml
<ListView>
    <fullName>Basso_Wundowie_Costs</fullName>
    <columns>Supply_Warehouse__c</columns>
    <columns>Part_Number__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Cost__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supply_Warehouse__c</field>
        <operation>equals</operation>
        <value>267,261</value>
    </filters>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>B300</value>
    </filters>
    <label>Basso &amp; Wundowie Costs</label>
</ListView>