BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/Bechir_MMP_Africa_Parts_list.listView-meta.xml
<ListView>
    <fullName>Bechir_MMP_Africa_Parts_list</fullName>
    <columns>Part_Number__c</columns>
    <columns>Cost__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>m4422-2</value>
    </filters>
    <filters>
        <field>Supply_Warehouse__c</field>
        <operation>equals</operation>
        <value>16a</value>
    </filters>
    <label>Bechir MMP Africa Parts list</label>
</ListView>