BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/Common_Parts_MMP_Africa.listView-meta.xml
<ListView>
    <fullName>Common_Parts_MMP_Africa</fullName>
    <columns>Part_Number__c</columns>
    <columns>Cost__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>OK340S1400-2A</value>
    </filters>
    <filters>
        <field>Supply_Warehouse__c</field>
        <operation>equals</operation>
        <value>12a</value>
    </filters>
    <label>Common Parts MMP Africa</label>
    <sharedTo>
        <role>RSM_Reinard_Abbott</role>
    </sharedTo>
</ListView>