BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/Darren_s_Product_costs.listView-meta.xml
<ListView>
    <fullName>Darren_s_Product_costs</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>DAB</value>
    </filters>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>DAP-HA</value>
    </filters>
    <label>Darren&apos;s Product costs</label>
</ListView>