BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/Ernesto_s_Unibis_costs.listView-meta.xml
<ListView>
    <fullName>Ernesto_s_Unibis_costs</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>Cost__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>1952-202-01B</value>
    </filters>
    <label>Ernesto&apos;s Unibis costs</label>
</ListView>