BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/Faye_s_Product_Costs.listView-meta.xml
<ListView>
    <fullName>Faye_s_Product_Costs</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Cost__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>DBB</value>
    </filters>
    <label>Faye&apos;s Product Costs</label>
</ListView>