BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/Ina_MMP_Africa_Parts_list.listView-meta.xml
<ListView>
    <fullName>Ina_MMP_Africa_Parts_list</fullName>
    <columns>Part_Number__c</columns>
    <columns>Cost__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>bk6697-7</value>
    </filters>
    <filters>
        <field>Supply_Warehouse__c</field>
        <operation>equals</operation>
        <value>235</value>
    </filters>
    <label>Ina MMP Africa Parts list</label>
</ListView>