BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/MMP_Foundries_Xuzhou_Wodonga_Coimb.listView-meta.xml
<ListView>
    <fullName>MMP_Foundries_Xuzhou_Wodonga_Coimb</fullName>
    <columns>Supply_Warehouse__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <columns>Cost__c</columns>
    <columns>Cost2__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supply_Warehouse__c</field>
        <operation>equals</operation>
        <value>12A,235,I92</value>
    </filters>
    <filters>
        <field>Part_Number__c</field>
        <operation>equals</operation>
        <value>OK400S2000-2A</value>
    </filters>
    <label>MMP Foundries - Xuzhou, Wodonga &amp; Coimb</label>
</ListView>