BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/MP_Foundries_Coimn_Mont_Joli_Merl.listView-meta.xml
<ListView>
    <fullName>MP_Foundries_Coimn_Mont_Joli_Merl</fullName>
    <columns>Supply_Warehouse__c</columns>
    <columns>Part_Number__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Cost__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <columns>Cost2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supply_Warehouse__c</field>
        <operation>equals</operation>
        <value>I92,H53,M61</value>
    </filters>
    <filters>
        <field>Cost__c</field>
        <operation>notEqual</operation>
        <value>,0</value>
    </filters>
    <label>MP Foundries - Coimn, Mont Joli, Merl</label>
</ListView>