BradkenProduction/force-app/main/default/objects/Unibis_Product_Cost__c/listViews/PC5500_PC8000_Costs.listView-meta.xml
<ListView>
    <fullName>PC5500_PC8000_Costs</fullName>
    <columns>Part_Number__c</columns>
    <columns>Supply_Warehouse__c</columns>
    <columns>Cost__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supply_Warehouse__c</field>
        <operation>contains</operation>
        <value>16A,12A,H71</value>
    </filters>
    <filters>
        <field>Part_Number__c</field>
        <operation>contains</operation>
        <value>EK120E,DK120E,UK120E,OK120E,B129C24X160M</value>
    </filters>
    <label>6030 UC</label>
</ListView>